Fix image sizes and spacing.

--- a/app.css
+++ b/app.css
@@ -52,10 +52,11 @@ table {
 /* END MEYER RESET */
 
 body {
-    margin: 35px;
+    margin: 43px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* justify-content: space-evenly; */
 }
 
 header {
@@ -79,26 +80,24 @@ h1 {
 }
 
 main {
-    margin-top: 10px;
-    width: 960px;
+    margin-top: 8px;
+    width: 994px;
     display: flex;
     justify-content: center;
 }
 
-.image-container {
-    /* display: block; */
-    margin: 17px;
-    /* width: 100%; */
-    /* height: auto; */
-    object-fit: contain;
-    
+img {
+    max-width: 100%;
 }
 
+.image-container {
+    padding: 17px;
+}
 .image-overlay {
     display: block;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,.1);
+    object-fit: contain;
+    /* width: auto;
+    height: 100%; */
     position: absolute;
-    z-index: 1;
+    background-color: rgba(0,0,0,.1)
 }
